--- a/alembic.ini
+++ b/alembic.ini
@@ -5,7 +5,7 @@
 script_location = alembic
 
 # template used to generate migration files
-# file_template = %%(rev)s_%%(slug)s
+file_template = %%(year)d-%%(month).2d-%%(day).2d_%%(slug)s
 
 # sys.path path, will be prepended to sys.path if present.
 # defaults to the current working directory.
@@ -66,6 +66,10 @@ sqlalchemy.url = driver://user:pass@localhost/dbname
 # format using "ruff" - to use:
 # 1. pip install ruff
 # 2. uncomment the line below
+hooks = ruff
+ruff.type = console_scripts
+ruff.entrypoint = ruff
+ruff.options = format REVISION_SCRIPT_FILENAME
 
 # Logging configuration
 [loggers]
