--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,25 @@
 services:
-  api:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: app-api
-    ports:
-      - "8000:8000"
-    env_file:
-      - .env
-    volumes:
-      - ./app:/app/app
-      - ./alembic:/app/alembic
-
-  postgres-test:
-    image: postgres:17
-    container_name: app-postgres-test
+  postgres:
+    image: postgres:18
     environment:
+      POSTGRES_DB: postgres
+      POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
     ports:
-      - "127.0.0.1:5433:5432"
+      - "127.0.0.1:5434:5432"
     volumes:
-      - postgres_test_data:/var/lib/postgresql/data/
+      - postgres_data:/var/lib/postgresql/18/data
+
+  test-postgres:
+    image: postgres:18
+    environment:
+      POSTGRES_DB: postgres
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+    ports:
+      - "127.0.0.1:5435:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/18/data
 
 volumes:
   postgres_test_data:
